terceira versão funcional

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr> <!--Regua Horizontal (um traço na horizontal)-->
         <div id="div-construcoes">
             <picture id="valor-cursor">
-                <img id="img-cursor" src="cursor1.png">
+                <img id="img-cursor" src="cursor.png">
                 <div>10</div>
             </picture>
 
